Improve docs and include more endpoints for themes
