# src/main/kotlin/com/jeluchu/features/themes/models/artist/ArtistSongTheme.kt
@@ -1,0 +1,13 @@
+package com.jeluchu.features.themes.models.artist
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class ArtistSongTheme(
+    val type: String? = null,
+    val slug: String? = null,
+    val sequence: Int? = null,
+    val animeName: String? = null,
+    val animeSlug: String? = null,
+    val videoLink: String? = null
+)
