# src/main/kotlin/com/jeluchu/features/themes/models/song/SongArtist.kt
@@ -1,0 +1,10 @@
+package com.jeluchu.features.themes.models.song
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class SongArtist(
+    val id: Int? = null,
+    val name: String? = null,
+    val slug: String? = null
+)
