# src/main/kotlin/com/jeluchu/features/themes/routes/ThemesRoutes.kt
@@ -2,7 +2,6 @@ package com.jeluchu.features.themes.routes
 
 import com.jeluchu.core.extensions.getToJson
 import com.jeluchu.core.utils.Routes
-import com.jeluchu.features.schedule.services.ScheduleService
 import com.jeluchu.features.themes.services.AnimeThemesService
 import com.mongodb.client.MongoDatabase
 import io.ktor.server.routing.*
@@ -11,5 +10,19 @@ fun Route.themesEndpoints(
     mongoDatabase: MongoDatabase,
     service: AnimeThemesService = AnimeThemesService(mongoDatabase)
 ) = route(Routes.THEMES) {
-    getToJson(Routes.ANIME) { service.getAnimeThemes(call) }
+    route(Routes.ANIME) {
+        getToJson { service.getAnimeThemes(call) }
+        getToJson(Routes.SLUG) { service.getAnimeThemeBySlug(call) }
+        getToJson("${Routes.SLUG}${Routes.RANDOM}") { service.getRandomAnimeTheme(call) }
+    }
+
+    route(Routes.ARTISTS) {
+        getToJson { service.getArtists(call) }
+        getToJson(Routes.SLUG) { service.getArtistBySlug(call) }
+    }
+
+    route(Routes.SONGS) {
+        getToJson(Routes.RANDOM) { service.getRandomSong(call) }
+        getToJson { service.searchSongs(call) }
+    }
 }
